Corrections after revision

--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@
                     ./images/mobile-igor.jpg    1x,
                     ./images/mobile-igor@2x.jpg 2x
                   "
-                  media="(min-width:480px)"
+                  media="(max-width: 767px)"
                 />
 
                 <img
@@ -332,7 +332,7 @@
                     ./images/mobile-olga.jpg    1x,
                     ./images/mobile-olga@2x.jpg 2x
                   "
-                  media="(min-width:480px)"
+                  media="(max-width: 767px)"
                 />
 
                 <img
@@ -394,7 +394,7 @@
                     ./images/mobile-nick.jpg    1x,
                     ./images/mobile-nick@2x.jpg 2x
                   "
-                  media="(min-width:480px)"
+                  media="(max-width: 767px)"
                 />
                 <img src="./images/nick.jpg" alt="marketing" width="100%" />
               </picture>
@@ -451,7 +451,7 @@
                     ./images/mobile-mike.jpg    1x,
                     ./images/mobile-mike@2x.jpg 2x
                   "
-                  media="(min-width:480px)"
+                  media="(max-width: 767px)"
                 />
 
                 <img src="./images/mike.jpg" alt="ui designer" width="100%" />
