--- a/portfolio.html
+++ b/portfolio.html
@@ -187,7 +187,7 @@
                           ./images/mobile-clients1.jpg    1x,
                           ./images/mobile-clients1@2x.jpg 2x
                         "
-                        media="(min-width:480px)"
+                        media="(max-width:767px)"
                       />
 
                       <img
@@ -234,7 +234,7 @@
                           ./images/mobile-clients2.jpg    1x,
                           ./images/mobile-clients2@2x.jpg 2x
                         "
-                        media="(min-width:480px)"
+                        media="(max-width:767px)"
                       />
 
                       <img
@@ -283,7 +283,7 @@
                           ./images/mobile-clients3.jpg    1x,
                           ./images/mobile-clients3@2x.jpg 2x
                         "
-                        media="(min-width:480px)"
+                        media="(max-width:767px)"
                       />
 
                       <img
@@ -330,7 +330,7 @@
                           ./images/mobile-clients4.jpg    1x,
                           ./images/mobile-clients4@2x.jpg 2x
                         "
-                        media="(min-width:480px)"
+                        media="(max-width:767px)"
                       />
 
                       <img
@@ -373,9 +373,11 @@
                         media="(min-width:768px)"
                       />
                       <source
-                        srcset="./images/mobile-clients5.jpg 1x, .
-                      /images/mobile-clients5@2x.jpg 2x"
-                        media="(min-width:480px)"
+                        srcset="
+                          ./images/mobile-clients5.jpg    1x,
+                          ./images/mobile-clients5@2x.jpg 2x
+                        "
+                        media="(max-width:767px)"
                       />
 
                       <img
@@ -418,9 +420,11 @@
                         media="(min-width:768px)"
                       />
                       <source
-                        srcset="./images/mobile-clients6.jpg 1x, .
-                      /images/mobile-clients6@2x.jpg 2x"
-                        media="(min-width:480px)"
+                        srcset="
+                          ./images/mobile-clients6.jpg    1x,
+                          ./images/mobile-clients6@2x.jpg 2x
+                        "
+                        media="(max-width:767px)"
                       />
 
                       <img
@@ -463,9 +467,11 @@
                         media="(min-width:768px)"
                       />
                       <source
-                        srcset="./images/mobile-clients7.jpg 1x, .
-                      /images/mobile-clients7@2x.jpg 2x"
-                        media="(min-width:480px)"
+                        srcset="
+                          ./images/mobile-clients7.jpg    1x,
+                          ./images/mobile-clients7@2x.jpg 2x
+                        "
+                        media="(max-width:767px)"
                       />
 
                       <img
@@ -508,9 +514,11 @@
                         media="(min-width:768px)"
                       />
                       <source
-                        srcset="./images/mobile-clients8.jpg 1x, .
-                      /images/mobile-clients8@2x.jpg 2x"
-                        media="(min-width:480px)"
+                        srcset="
+                          ./images/mobile-clients8.jpg    1x,
+                          ./images/mobile-clients8@2x.jpg 2x
+                        "
+                        media="(max-width:767px)"
                       />
 
                       <img
@@ -553,9 +561,11 @@
                         media="(min-width:768px)"
                       />
                       <source
-                        srcset="./images/mobile-clients9.jpg 1x, .
-                      /images/mobile-clients9@2x.jpg 2x"
-                        media="(min-width:480px)"
+                        srcset="
+                          ./images/mobile-clients9.jpg    1x,
+                          ./images/mobile-clients9@2x.jpg 2x
+                        "
+                        media="(max-width:767px)"
                       />
 
                       <img
